tests/miniJava/neg/000020_mutation.MiniJava
class false { public static void Main ( String [ ] java ) { { } } }
